--- a/dify/code/docker-compose.yaml
+++ b/dify/code/docker-compose.yaml
@@ -341,6 +341,23 @@ services:
       TEXT_GENERATION_TIMEOUT_MS: ${TEXT_GENERATION_TIMEOUT_MS:-60000}
       CSP_WHITELIST: ${CSP_WHITELIST:-}
 
+  # Plugin daemon service (ajouté)
+  plugin_daemon:
+    image: langgenius/dify-plugin-daemon:1.3.1
+    restart: always
+    environment:
+      # Use the shared environment variables.
+      <<: *shared-api-worker-env
+      # Startup mode, 'daemon' starts the plugin daemon.
+      MODE: daemon
+    depends_on:
+      - redis
+    networks:
+      - ssrf_proxy_network
+      - default
+    ports:
+      - "5002:5002"
+
   # The postgres database.
   db:
     image: postgres:15-alpine
