--- a/dify/code/docker-compose.yaml
+++ b/dify/code/docker-compose.yaml
@@ -290,44 +290,64 @@ x-shared-env: &shared-api-worker-env
   RETRIEVAL_TOP_N: ${RETRIEVAL_TOP_N:-0}
 
 services:
-  # API service
   api:
     image: langgenius/dify-api:1.3.1
     restart: always
     environment:
-      # Use the shared environment variables.
       <<: *shared-api-worker-env
-      # Startup mode, 'api' starts the API server.
       MODE: api
+      PLUGIN_SERVER_ENDPOINT: http://plugin_daemon:5002    # ← ajouté
     depends_on:
       - db
       - redis
+      - plugin_daemon                                       # ← démarre après le daemon
     volumes:
-      # Mount the storage directory to the container, for storing user files.
       - ./volumes/app/storage:/app/api/storage
     networks:
-      - ssrf_proxy_network
-      - default
+      - default                                             # ssrf_proxy_network si tu y tiens
 
-  # worker service
-  # The Celery worker for processing the queue.
   worker:
     image: langgenius/dify-api:1.3.1
     restart: always
     environment:
-      # Use the shared environment variables.
       <<: *shared-api-worker-env
-      # Startup mode, 'worker' starts the Celery worker for processing the queue.
       MODE: worker
+      PLUGIN_SERVER_ENDPOINT: http://plugin_daemon:5002    # ← ajouté
+    depends_on:
+      - db
+      - redis
+      - plugin_daemon
+    volumes:
+      - ./volumes/app/storage:/app/api/storage
+    networks:
+      - default
+
+  web:
+    image: langgenius/dify-web:1.3.1
+    restart: always
+    environment:
+      CONSOLE_API_URL: ${CONSOLE_API_URL:-}
+      APP_API_URL: ${APP_API_URL:-}
+      SENTRY_DSN: ${WEB_SENTRY_DSN:-}
+      NEXT_TELEMETRY_DISABLED: ${NEXT_TELEMETRY_DISABLED:-0}
+      TEXT_GENERATION_TIMEOUT_MS: ${TEXT_GENERATION_TIMEOUT_MS:-60000}
+      CSP_WHITELIST: ${CSP_WHITELIST:-}
+    networks:
+      - default
+
+  plugin_daemon:
+    image: langgenius/dify-plugin-daemon:0.2.11
+    restart: always
+    environment:
+      PORT: 5002                       # le daemon écoute là
     depends_on:
       - db
       - redis
     volumes:
-      # Mount the storage directory to the container, for storing user files.
-      - ./volumes/app/storage:/app/api/storage
+      - ./volumes/plugin_daemon:/data
     networks:
-      - ssrf_proxy_network
       - default
+
 
   # Frontend web application.
   web:
