--- a/dify/code/docker-compose.yaml
+++ b/dify/code/docker-compose.yaml
@@ -308,7 +308,8 @@ services:
     networks:
       - ssrf_proxy_network
       - default
-
+    PLUGIN_SERVER_ENDPOINT: ""
+    
   # worker service
   # The Celery worker for processing the queue.
   worker:
@@ -328,7 +329,8 @@ services:
     networks:
       - ssrf_proxy_network
       - default
-
+    PLUGIN_SERVER_ENDPOINT: ""
+    
   # Frontend web application.
   web:
     image: langgenius/dify-web:1.3.1
