--- a/dify/code/docker-compose.yaml
+++ b/dify/code/docker-compose.yaml
@@ -298,10 +298,12 @@ services:
       # Use the shared environment variables.
       <<: *shared-api-worker-env
       # Startup mode, 'api' starts the API server.
-      MODE: api     
+      MODE: api
+      PLUGIN_DAEMON_API_BASE_URL: http://plugin_daemon:5002
     depends_on:
       - db
       - redis
+      - plugin_daemon
     volumes:
       # Mount the storage directory to the container, for storing user files.
       - ./volumes/app/storage:/app/api/storage
@@ -318,10 +320,12 @@ services:
       # Use the shared environment variables.
       <<: *shared-api-worker-env
       # Startup mode, 'worker' starts the Celery worker for processing the queue.
-      MODE: worker      
+      MODE: worker
+      PLUGIN_DAEMON_API_BASE_URL: http://plugin_daemon:5002
     depends_on:
       - db
       - redis
+      - plugin_daemon
     volumes:
       # Mount the storage directory to the container, for storing user files.
       - ./volumes/app/storage:/app/api/storage
@@ -340,6 +344,18 @@ services:
       NEXT_TELEMETRY_DISABLED: ${NEXT_TELEMETRY_DISABLED:-0}
       TEXT_GENERATION_TIMEOUT_MS: ${TEXT_GENERATION_TIMEOUT_MS:-60000}
       CSP_WHITELIST: ${CSP_WHITELIST:-}
+
+   plugin_daemon:
+    image: langgenius/dify-plugin-daemon:0.0.9  # <-- La bonne version
+    restart: always
+    # Pas de 'environment:' ici selon le guide
+    depends_on: # <-- Ajouté pour être cohérent avec l'original
+      - db
+      - redis
+    volumes:
+      - ./volumes/plugin_daemon:/data
+    networks: # <-- Important pour communiquer
+      - default   
 
   # The postgres database.
   db:
